Add user delete and list
